--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "@types/faker": "^5.1.5",
     "@types/firefox-webext-browser": "^82.0.0",
     "@types/jest": "^26.0.16",
-    "@types/lodash": "^4.14.165",
+    "@types/lodash-es": "^4.17.3",
     "@typescript-eslint/eslint-plugin": "^4.9.0",
     "@typescript-eslint/parser": "^4.9.0",
     "babel-jest": "^26.6.3",
@@ -45,6 +45,7 @@
     "eslint-plugin-svelte3": "^2.7.3",
     "faker": "^5.1.0",
     "jest": "^26.6.3",
+    "lodash-es": "^4.17.15",
     "mockzilla": "^0.9.0",
     "mockzilla-webextension": "^0.9.0",
     "normalize.css": "^8.0.1",
@@ -64,9 +65,7 @@
     "typescript": "^4.1.2",
     "webextension-polyfill-ts": "^0.22.0"
   },
-  "dependencies": {
-    "lodash": "^4.17.20"
-  },
+  "dependencies": {},
   "webExt": {
     "sourceDir": "./dist"
   }
