--- a/package.json
+++ b/package.json
@@ -14,55 +14,56 @@
   "author": "Max Smolens <msmolens@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@babel/preset-env": "^7.12.7",
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-html": "^0.2.0",
-    "@rollup/plugin-image": "^2.0.5",
-    "@rollup/plugin-node-resolve": "^11.0.0",
-    "@rollup/plugin-typescript": "^8.0.0",
-    "@smui/button": "^1.0.0",
-    "@smui/dialog": "^1.0.0",
-    "@smui/icon-button": "^1.0.0",
-    "@smui/linear-progress": "^1.0.0",
-    "@smui/snackbar": "^1.0.0",
-    "@smui/textfield": "^1.0.0",
-    "@testing-library/jest-dom": "^5.11.6",
-    "@testing-library/svelte": "^3.0.0",
-    "@testing-library/user-event": "^12.5.0",
+    "@rollup/plugin-image": "^2.0.6",
+    "@rollup/plugin-node-resolve": "^11.1.0",
+    "@rollup/plugin-typescript": "^8.1.0",
+    "@smui/button": "^1.1.0",
+    "@smui/dialog": "^1.1.0",
+    "@smui/icon-button": "^1.1.0",
+    "@smui/linear-progress": "^1.1.0",
+    "@smui/snackbar": "^1.1.0",
+    "@smui/textfield": "^1.1.0",
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/svelte": "^3.0.3",
+    "@testing-library/user-event": "^12.6.2",
     "@tsconfig/svelte": "^1.0.10",
     "@types/faker": "^5.1.5",
     "@types/firefox-webext-browser": "^82.0.0",
-    "@types/jest": "^26.0.16",
-    "@types/lodash-es": "^4.17.3",
-    "@typescript-eslint/eslint-plugin": "^4.9.0",
-    "@typescript-eslint/parser": "^4.9.0",
+    "@types/jest": "^26.0.20",
+    "@types/lodash-es": "^4.17.4",
+    "@typescript-eslint/eslint-plugin": "^4.14.0",
+    "@typescript-eslint/parser": "^4.14.0",
     "babel-jest": "^26.6.3",
-    "eslint": "^7.14.0",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-plugin-prettier": "^3.2.0",
-    "eslint-plugin-simple-import-sort": "^6.0.1",
-    "eslint-plugin-svelte3": "^2.7.3",
+    "eslint": "^7.18.0",
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
+    "eslint-plugin-svelte3": "^3.0.0",
     "faker": "^5.1.0",
     "jest": "^26.6.3",
-    "lodash-es": "^4.17.15",
+    "lodash-es": "^4.17.20",
     "mockzilla": "^0.9.0",
     "mockzilla-webextension": "^0.9.0",
     "normalize.css": "^8.0.1",
+    "postcss": "^8.2.4",
     "prettier": "^2.2.1",
-    "prettier-plugin-svelte": "^1.4.1",
-    "rollup": "^2.34.1",
+    "prettier-plugin-svelte": "^1.4.2",
+    "rollup": "^2.37.1",
     "rollup-plugin-copy": "^3.3.0",
-    "rollup-plugin-postcss": "^3.1.8",
-    "rollup-plugin-svelte": "^7.0.0",
+    "rollup-plugin-postcss": "^4.0.0",
+    "rollup-plugin-svelte": "^7.1.0",
     "rollup-plugin-terser": "^7.0.2",
-    "sass": "^1.29.0",
-    "svelte": "^3.31.0",
-    "svelte-check": "^1.1.19",
-    "svelte-jester": "^1.1.5",
+    "sass": "^1.32.5",
+    "svelte": "^3.31.2",
+    "svelte-check": "^1.1.28",
+    "svelte-jester": "^1.3.0",
     "svelte-preprocess": "^4.6.1",
     "ts-jest": "^26.4.4",
-    "typescript": "^4.1.2",
+    "typescript": "^4.1.3",
     "webextension-polyfill-ts": "^0.22.0"
   },
   "dependencies": {},
