Use fonts from Fontsource packages
The Fontsource [1] repository bundles open source fonts into individual
NPM packages. Replace manual packaging and configuration of fonts with
Fontsource packages.

Note that this requires adding the postcss-url plugin integrate the new
fonts into the build process. The plugin handles copying the font files
into the distribution directory and rewriting their paths in the CSS.

[1] https://github.com/fontsource/fontsource

--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
   "devDependencies": {
     "@babel/core": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
+    "@fontsource/inter": "^4.1.0",
+    "@fontsource/material-icons": "^4.1.0",
+    "@fontsource/news-cycle": "^4.1.0",
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-html": "^0.2.0",
     "@rollup/plugin-image": "^2.0.6",
@@ -50,6 +53,7 @@
     "mockzilla-webextension": "^0.9.0",
     "normalize.css": "^8.0.1",
     "postcss": "^8.2.4",
+    "postcss-url": "^10.1.1",
     "prettier": "^2.2.1",
     "prettier-plugin-svelte": "^2.1.1",
     "rollup": "^2.37.1",
