Enable linting TypeScript in Svelte components
Update eslint-plugin-svelte to support linting TypeScript in Svelte
components. Additionally, update other ESLint-related dependencies.

--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.1",
   "description": "Treetop",
   "scripts": {
-    "lint": "eslint ./src ./test --ext .js,.ts",
-    "lint:fix": "eslint ./src ./test --ext .js,.ts --fix",
+    "lint": "eslint ./src ./test",
+    "lint:fix": "eslint ./src ./test --fix",
     "prettier": "prettier --write ./src ./test",
     "build": "rollup --config",
     "build:dev": "rollup --config -w",
@@ -38,13 +38,13 @@
     "@types/firefox-webext-browser": "^82.0.0",
     "@types/jest": "^26.0.20",
     "@types/lodash-es": "^4.17.4",
-    "@typescript-eslint/eslint-plugin": "^4.15.1",
-    "@typescript-eslint/parser": "^4.15.1",
+    "@typescript-eslint/eslint-plugin": "^4.28.2",
+    "@typescript-eslint/parser": "^4.28.2",
     "babel-jest": "^26.6.3",
-    "eslint": "^7.20.0",
-    "eslint-config-prettier": "^8.0.0",
+    "eslint": "^7.30.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
-    "eslint-plugin-svelte3": "^3.0.0",
+    "eslint-plugin-svelte3": "^3.2.0",
     "faker": "^5.4.0",
     "jest": "^26.6.3",
     "lodash-es": "^4.17.21",
