Update prettier and prettier-plugin-svelte

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "lint": "eslint ./src ./test",
     "lint:fix": "eslint ./src ./test --fix",
-    "prettier": "prettier --write ./src ./test",
+    "prettier": "prettier --check ./src ./test",
+    "prettier:fix": "prettier --write ./src ./test",
     "build": "rollup --config",
     "build:dev": "rollup --config -w",
     "test": "jest",
@@ -53,8 +54,8 @@
     "normalize.css": "^8.0.1",
     "postcss": "^8.2.6",
     "postcss-url": "^10.1.1",
-    "prettier": "^2.2.1",
-    "prettier-plugin-svelte": "^2.1.6",
+    "prettier": "^2.3.2",
+    "prettier-plugin-svelte": "^2.3.1",
     "rollup": "^2.39.0",
     "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-postcss": "^4.0.0",
