--- a/package.json
+++ b/package.json
@@ -31,27 +31,29 @@
     "@smui/linear-progress": "^1.1.0",
     "@smui/snackbar": "^1.1.0",
     "@smui/textfield": "^1.1.0",
-    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/svelte": "^3.0.3",
-    "@testing-library/user-event": "^12.7.1",
+    "@testing-library/user-event": "^13.2.0",
     "@tsconfig/svelte": "^2.0.1",
     "@types/faker": "^5.5.7",
-    "@types/firefox-webext-browser": "^82.0.0",
+    "@types/firefox-webext-browser": "^82.0.1",
     "@types/jest": "^26.0.24",
     "@types/lodash-es": "^4.17.4",
-    "@typescript-eslint/eslint-plugin": "^4.28.2",
-    "@typescript-eslint/parser": "^4.28.2",
+    "@typescript-eslint/eslint-plugin": "^4.28.3",
+    "@typescript-eslint/parser": "^4.28.3",
     "babel-jest": "^27.0.6",
-    "eslint": "^7.30.0",
+    "eslint": "^7.31.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "eslint-plugin-svelte3": "^3.2.0",
     "faker": "^5.5.3",
+    "install": "^0.13.0",
     "jest": "^27.0.6",
     "lodash-es": "^4.17.21",
     "mockzilla": "^0.9.0",
     "mockzilla-webextension": "^0.9.0",
     "normalize.css": "^8.0.1",
+    "npm": "^7.20.0",
     "postcss": "^8.3.5",
     "postcss-url": "^10.1.3",
     "prettier": "^2.3.2",
@@ -63,9 +65,9 @@
     "rollup-plugin-terser": "^7.0.2",
     "sass": "^1.32.8",
     "svelte": "^3.38.3",
-    "svelte-check": "^2.2.0",
+    "svelte-check": "^2.2.3",
     "svelte-jester": "^1.7.0",
-    "svelte-preprocess": "^4.7.3",
+    "svelte-preprocess": "^4.7.4",
     "ts-jest": "^27.0.3",
     "typescript": "^4.1.5",
     "webextension-polyfill-ts": "^0.26.0"
