--- a/package.json
+++ b/package.json
@@ -25,12 +25,12 @@
     "@rollup/plugin-image": "^2.0.6",
     "@rollup/plugin-node-resolve": "^13.0.2",
     "@rollup/plugin-typescript": "^8.2.3",
-    "@smui/button": "^1.1.0",
-    "@smui/dialog": "^1.1.0",
-    "@smui/icon-button": "^1.1.0",
-    "@smui/linear-progress": "^1.1.0",
-    "@smui/snackbar": "^1.1.0",
-    "@smui/textfield": "^1.1.0",
+    "@smui/button": "^4.2.0",
+    "@smui/dialog": "^4.2.0",
+    "@smui/icon-button": "^4.2.0",
+    "@smui/linear-progress": "^4.2.0",
+    "@smui/snackbar": "^4.2.0",
+    "@smui/textfield": "^4.2.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/svelte": "^3.0.3",
     "@testing-library/user-event": "^13.2.0",
@@ -63,13 +63,14 @@
     "rollup-plugin-postcss": "^4.0.0",
     "rollup-plugin-svelte": "^7.1.0",
     "rollup-plugin-terser": "^7.0.2",
-    "sass": "^1.32.8",
+    "sass": "^1.35.2",
     "svelte": "^3.38.3",
     "svelte-check": "^2.2.3",
     "svelte-jester": "^1.7.0",
     "svelte-preprocess": "^4.7.4",
     "ts-jest": "^27.0.3",
-    "typescript": "^4.1.5",
+    "tslib": "^2.3.0",
+    "typescript": "^4.1.6",
     "webextension-polyfill-ts": "^0.26.0"
   },
   "dependencies": {},
