--- a/package.json
+++ b/package.json
@@ -36,9 +36,9 @@
     "@testing-library/user-event": "^13.2.1",
     "@tsconfig/svelte": "^2.0.1",
     "@types/faker": "^5.5.8",
-    "@types/firefox-webext-browser": "^82.0.1",
     "@types/jest": "^27.0.1",
     "@types/lodash-es": "^4.17.5",
+    "@types/webextension-polyfill": "^0.8.0",
     "@typescript-eslint/eslint-plugin": "^4.31.0",
     "@typescript-eslint/parser": "^4.31.0",
     "babel-jest": "^27.1.1",
@@ -47,11 +47,10 @@
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "eslint-plugin-svelte3": "^3.2.1",
     "faker": "^5.5.3",
-    "install": "^0.13.0",
     "jest": "^27.1.1",
     "lodash-es": "^4.17.21",
-    "mockzilla": "^0.9.0",
-    "mockzilla-webextension": "^0.9.0",
+    "mockzilla": "^0.12.0",
+    "mockzilla-webextension": "^0.13.0",
     "normalize.css": "^8.0.1",
     "postcss": "^8.3.6",
     "postcss-url": "^10.1.3",
@@ -70,7 +69,7 @@
     "ts-jest": "^27.0.5",
     "tslib": "^2.3.1",
     "typescript": "^4.1.6",
-    "webextension-polyfill-ts": "^0.26.0"
+    "webextension-polyfill": "^0.8.0"
   },
   "dependencies": {},
   "webExt": {
