--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,9 +16,9 @@ jobs:
         id: set-filename
         run: echo ::set-output name=filename::treetop-${GITHUB_REF#refs/*/}.zip
       - name: Use Node.js
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v2
         with:
-          node-version: '14.x'
+          node-version: '16'
       - run: npm ci
       - run: npm run build
       - run: npx web-ext build --no-input=true --filename "${{ steps.set-filename.outputs.filename}}"
