Update SMUI to 6.0.0-beta.16

--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "0.0.1",
   "description": "Treetop",
   "scripts": {
+    "compile-smui-theme-light": "smui-theme compile src/treetop/generated/smui.css -i src/theme",
+    "compile-smui-theme-dark": "smui-theme compile src/treetop/generated/smui-dark.css -i src/theme/dark",
     "lint": "eslint ./src ./test",
     "lint:fix": "eslint ./src ./test --fix",
     "prettier": "prettier --check ./src ./test",
     "prettier:fix": "prettier --write ./src ./test",
     "build": "rollup --config",
     "build:dev": "rollup --config -w",
+    "prepare": "npm run compile-smui-theme-light && npm run compile-smui-theme-dark",
     "test": "jest",
     "validate": "svelte-check"
   },
@@ -25,12 +28,12 @@
     "@rollup/plugin-image": "^2.1.1",
     "@rollup/plugin-node-resolve": "^13.0.4",
     "@rollup/plugin-typescript": "^8.2.5",
-    "@smui/button": "^4.2.0",
-    "@smui/dialog": "^4.2.0",
-    "@smui/icon-button": "^4.2.0",
-    "@smui/linear-progress": "^4.2.0",
-    "@smui/snackbar": "^4.2.0",
-    "@smui/textfield": "^4.2.0",
+    "@smui/button": "^6.0.0-beta.16",
+    "@smui/dialog": "^6.0.0-beta.16",
+    "@smui/icon-button": "^6.0.0-beta.16",
+    "@smui/linear-progress": "^6.0.0-beta.16",
+    "@smui/snackbar": "^6.0.0-beta.16",
+    "@smui/textfield": "^6.0.0-beta.16",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/svelte": "^3.0.3",
     "@testing-library/user-event": "^13.2.1",
@@ -62,6 +65,7 @@
     "rollup-plugin-svelte": "^7.1.0",
     "rollup-plugin-terser": "^7.0.2",
     "sass": "^1.39.2",
+    "smui-theme": "^6.0.0-beta.16",
     "svelte": "^3.38.3",
     "svelte-check": "^2.2.3",
     "svelte-jester": "^1.7.0",
@@ -71,7 +75,6 @@
     "typescript": "^4.1.6",
     "webextension-polyfill": "^0.8.0"
   },
-  "dependencies": {},
   "engines": {
     "node": ">=14 <17",
     "npm": ">=8"
