--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
   "author": "Max Smolens <msmolens@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.17.10",
-    "@babel/preset-env": "^7.17.10",
+    "@babel/core": "^7.18.2",
+    "@babel/preset-env": "^7.18.2",
     "@fontsource/inter": "^4.5.10",
     "@fontsource/material-icons": "^4.5.4",
     "@fontsource/news-cycle": "^4.5.5",
@@ -35,25 +35,25 @@
     "@smui/snackbar": "^6.0.0-beta.16",
     "@smui/textfield": "^6.0.0-beta.16",
     "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/svelte": "^3.1.1",
-    "@testing-library/user-event": "^14.1.1",
+    "@testing-library/svelte": "^3.1.3",
+    "@testing-library/user-event": "^14.2.0",
     "@tsconfig/svelte": "^2.0.1",
     "@types/faker": "^5.5.9",
-    "@types/jest": "^27.5.0",
     "@types/lodash-es": "^4.17.6",
-    "@types/webextension-polyfill": "^0.8.3",
+    "@types/webextension-polyfill": "^0.9.0",
     "@typescript-eslint/eslint-plugin": "^4.33.0",
     "@typescript-eslint/parser": "^4.33.0",
-    "babel-jest": "^27.5.1",
+    "babel-jest": "^28.1.1",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "eslint-plugin-svelte3": "^3.4.1",
     "faker": "^5.5.3",
-    "jest": "^27.5.1",
+    "jest": "^28.1.1",
+    "jest-environment-jsdom": "^28.1.1",
     "lodash-es": "^4.17.21",
-    "mockzilla": "^0.12.0",
-    "mockzilla-webextension": "^0.13.0",
+    "mockzilla": "^0.13.0",
+    "mockzilla-webextension": "^0.14.0",
     "normalize.css": "^8.0.1",
     "postcss": "^8.4.13",
     "postcss-url": "^10.1.3",
@@ -69,11 +69,10 @@
     "svelte": "^3.38.3",
     "svelte-check": "^2.2.3",
     "svelte-jester": "^2.3.2",
-    "svelte-preprocess": "^4.7.4",
-    "ts-jest": "^27.1.4",
-    "tslib": "^2.3.1",
-    "typescript": "^4.1.6",
-    "webextension-polyfill": "^0.8.0"
+    "svelte-preprocess": "^4.10.7",
+    "ts-jest": "^28.0.4",
+    "typescript": "^4.7.3",
+    "webextension-polyfill": "^0.9.0"
   },
   "engines": {
     "node": ">=14 <17",
