Replace Rollup with Vite
Replace Rollup with Vite as the build tool. Svelte now recommends using
Vite instead of Rollup.

--- a/package.json
+++ b/package.json
@@ -9,8 +9,16 @@
     "lint:fix": "eslint ./src ./test --fix",
     "prettier": "prettier --check ./src ./test",
     "prettier:fix": "prettier --write ./src ./test",
-    "build": "rollup --config",
-    "build:dev": "rollup --config -w",
+    "build": "concurrently --max-processes 1 \"npm:build:background_script\" \"npm:build:options\" \"npm:build:treetop\" \"npm:build:welcome\"",
+    "build:watch": "concurrently \"npm:build:background_script:watch\" \"npm:build:options:watch\" \"npm:build:treetop:watch\" \"npm:build:welcome:watch\"",
+    "build:background_script": "vite build --config vite.background_script.config.js",
+    "build:background_script:watch": "vite build --config vite.background_script.config.js --watch",
+    "build:options": "vite build --config vite.options.config.js",
+    "build:options:watch": "vite build --config vite.options.config.js --watch",
+    "build:treetop": "vite build --config vite.treetop.config.js",
+    "build:treetop:watch": "vite build --config vite.treetop.config.js --watch",
+    "build:welcome": "vite build --config vite.welcome.config.js",
+    "build:welcome:watch": "vite build --config vite.welcome.config.js --watch",
     "prepare": "npm run compile-smui-theme-light && npm run compile-smui-theme-dark",
     "test": "jest",
     "validate": "svelte-check"
@@ -23,17 +31,13 @@
     "@fontsource/inter": "^4.5.11",
     "@fontsource/material-icons": "^4.5.4",
     "@fontsource/news-cycle": "^4.5.7",
-    "@rollup/plugin-commonjs": "^22.0.0",
-    "@rollup/plugin-html": "^0.2.4",
-    "@rollup/plugin-image": "^2.1.1",
-    "@rollup/plugin-node-resolve": "^13.3.0",
-    "@rollup/plugin-typescript": "^8.3.3",
     "@smui/button": "^6.0.0-beta.16",
     "@smui/dialog": "^6.0.0-beta.16",
     "@smui/icon-button": "^6.0.0-beta.16",
     "@smui/linear-progress": "^6.0.0-beta.16",
     "@smui/snackbar": "^6.0.0-beta.16",
     "@smui/textfield": "^6.0.0-beta.16",
+    "@sveltejs/vite-plugin-svelte": "^1.0.8",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/svelte": "^3.1.3",
     "@testing-library/user-event": "^14.2.1",
@@ -44,6 +48,7 @@
     "@typescript-eslint/eslint-plugin": "^5.28.0",
     "@typescript-eslint/parser": "^5.28.0",
     "babel-jest": "^28.1.1",
+    "concurrently": "^7.4.0",
     "eslint": "^8.18.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
@@ -59,11 +64,7 @@
     "postcss-url": "^10.1.3",
     "prettier": "^2.7.1",
     "prettier-plugin-svelte": "^2.7.0",
-    "rollup": "^2.75.6",
     "rollup-plugin-copy": "^3.4.0",
-    "rollup-plugin-postcss": "^4.0.2",
-    "rollup-plugin-svelte": "^7.1.0",
-    "rollup-plugin-terser": "^7.0.2",
     "sass": "^1.52.3",
     "smui-theme": "^6.0.0-beta.16",
     "svelte": "^3.48.0",
@@ -72,6 +73,8 @@
     "svelte-preprocess": "^4.10.7",
     "ts-jest": "^28.0.5",
     "typescript": "^4.7.4",
+    "vite": "^3.1.3",
+    "vite-tsconfig-paths": "^3.5.0",
     "webextension-polyfill": "^0.9.0"
   },
   "engines": {
