--- a/src/manifest.json
+++ b/src/manifest.json
@@ -15,7 +15,7 @@
     "256": "icons/icon256.png"
   },
   "background": {
-    "scripts": ["background_script.bundle.js"]
+    "scripts": ["background_script.js"]
   },
   "browser_action": {
     "default_icon": {
