Disable minification when building for development

--- a/package.json
+++ b/package.json
@@ -12,13 +12,13 @@
     "build": "concurrently --max-processes 1 \"npm:build:background_script\" \"npm:build:options\" \"npm:build:treetop\" \"npm:build:welcome\"",
     "build:watch": "concurrently \"npm:build:background_script:watch\" \"npm:build:options:watch\" \"npm:build:treetop:watch\" \"npm:build:welcome:watch\"",
     "build:background_script": "vite build --config vite.background_script.config.js",
-    "build:background_script:watch": "vite build --config vite.background_script.config.js --watch",
+    "build:background_script:watch": "vite build --config vite.background_script.config.js --mode development --watch",
     "build:options": "vite build --config vite.options.config.js",
-    "build:options:watch": "vite build --config vite.options.config.js --watch",
+    "build:options:watch": "vite build --config vite.options.config.js --mode development --watch",
     "build:treetop": "vite build --config vite.treetop.config.js",
-    "build:treetop:watch": "vite build --config vite.treetop.config.js --watch",
+    "build:treetop:watch": "vite build --config vite.treetop.config.js --mode development --watch",
     "build:welcome": "vite build --config vite.welcome.config.js",
-    "build:welcome:watch": "vite build --config vite.welcome.config.js --watch",
+    "build:welcome:watch": "vite build --config vite.welcome.config.js --mode development --watch",
     "prepare": "npm run compile-smui-theme-light && npm run compile-smui-theme-dark",
     "test": "jest",
     "validate": "svelte-check"
