--- a/package.json
+++ b/package.json
@@ -31,12 +31,12 @@
     "@fontsource/inter": "^4.5.12",
     "@fontsource/material-icons": "^4.5.4",
     "@fontsource/news-cycle": "^4.5.8",
-    "@smui/button": "^6.0.0-beta.16",
-    "@smui/dialog": "^6.0.0-beta.16",
-    "@smui/icon-button": "^6.0.0-beta.16",
-    "@smui/linear-progress": "^6.0.0-beta.16",
-    "@smui/snackbar": "^6.0.0-beta.16",
-    "@smui/textfield": "^6.0.0-beta.16",
+    "@smui/button": "^6.1.4",
+    "@smui/dialog": "^6.1.4",
+    "@smui/icon-button": "^6.1.4",
+    "@smui/linear-progress": "^6.1.4",
+    "@smui/snackbar": "^6.1.4",
+    "@smui/textfield": "^6.1.4",
     "@sveltejs/vite-plugin-svelte": "^1.0.8",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/svelte": "^3.2.1",
@@ -66,7 +66,7 @@
     "prettier-plugin-svelte": "^2.7.1",
     "rollup-plugin-copy": "^3.4.0",
     "sass": "^1.55.0",
-    "smui-theme": "^6.0.0-beta.16",
+    "smui-theme": "^6.1.4",
     "svelte": "^3.50.1",
     "svelte-check": "^2.9.1",
     "svelte-jester": "^2.3.2",
