--- a/package.json
+++ b/package.json
@@ -26,29 +26,29 @@
   "author": "Max Smolens <msmolens@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.19.3",
-    "@babel/preset-env": "^7.19.3",
-    "@fontsource/inter": "^4.5.12",
+    "@babel/core": "^7.20.12",
+    "@babel/preset-env": "^7.20.2",
+    "@fontsource/inter": "^4.5.15",
     "@fontsource/material-icons": "^4.5.4",
-    "@fontsource/news-cycle": "^4.5.8",
+    "@fontsource/news-cycle": "^4.5.9",
     "@smui/button": "^6.1.4",
     "@smui/dialog": "^6.1.4",
     "@smui/icon-button": "^6.1.4",
     "@smui/linear-progress": "^6.1.4",
     "@smui/snackbar": "^6.1.4",
     "@smui/textfield": "^6.1.4",
-    "@sveltejs/vite-plugin-svelte": "^1.0.8",
+    "@sveltejs/vite-plugin-svelte": "^1.4.0",
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/svelte": "^3.2.1",
+    "@testing-library/svelte": "^3.2.2",
     "@testing-library/user-event": "^14.4.3",
     "@tsconfig/svelte": "^2.0.1",
     "@types/faker": "^5.5.9",
     "@types/lodash-es": "^4.17.6",
     "@types/webextension-polyfill": "^0.9.1",
-    "@typescript-eslint/eslint-plugin": "^5.38.1",
-    "@typescript-eslint/parser": "^5.38.1",
+    "@typescript-eslint/eslint-plugin": "^5.52.0",
+    "@typescript-eslint/parser": "^5.52.0",
     "babel-jest": "^28.1.1",
-    "concurrently": "^7.4.0",
+    "concurrently": "^7.6.0",
     "eslint": "^8.34.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
@@ -60,21 +60,21 @@
     "mockzilla": "^0.14.0",
     "mockzilla-webextension": "^0.15.0",
     "normalize.css": "^8.0.1",
-    "postcss": "^8.4.14",
+    "postcss": "^8.4.21",
     "postcss-url": "^10.1.3",
     "prettier": "^2.8.4",
     "prettier-plugin-svelte": "^2.9.0",
     "rollup-plugin-copy": "^3.4.0",
-    "sass": "^1.55.0",
+    "sass": "^1.58.3",
     "smui-theme": "^6.1.4",
-    "svelte": "^3.50.1",
-    "svelte-check": "^2.9.1",
+    "svelte": "~3.50.1",
+    "svelte-check": "^2.10.3",
     "svelte-jester": "^2.3.2",
     "svelte-preprocess": "^4.10.7",
     "ts-jest": "^28.0.5",
-    "typescript": "^4.7.4",
-    "vite": "^3.1.3",
-    "vite-tsconfig-paths": "^3.5.1",
+    "typescript": "~4.9.5",
+    "vite": "^3.2.5",
+    "vite-tsconfig-paths": "^4.0.5",
     "webextension-polyfill": "^0.9.0"
   },
   "engines": {
