--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "build:welcome:watch": "vite build --config vite.welcome.config.js --mode development --watch",
     "prepare": "npm run compile-smui-theme-light && npm run compile-smui-theme-dark",
     "test": "jest",
-    "validate": "svelte-check"
+    "validate": "svelte-check --no-tsconfig"
   },
   "author": "Max Smolens <msmolens@gmail.com>",
   "license": "MIT",
@@ -66,11 +66,11 @@
     "prettier-plugin-svelte": "^2.9.0",
     "rollup-plugin-copy": "^3.4.0",
     "sass": "^1.58.3",
-    "smui-theme": "^6.1.4",
+    "smui-theme": "^6.2.0",
     "svelte": "~3.55.1",
-    "svelte-check": "^2.10.3",
+    "svelte-check": "^3.0.3",
     "svelte-jester": "^2.3.2",
-    "svelte-preprocess": "^4.10.7",
+    "svelte-preprocess": "^5.0.1",
     "ts-jest": "^28.0.5",
     "typescript": "~4.9.5",
     "vite": "^3.2.5",
