--- a/package.json
+++ b/package.json
@@ -82,8 +82,8 @@
     "@babel/generator": "7.21.1"
   },
   "engines": {
-    "node": ">=14 <17",
-    "npm": ">=8"
+    "node": ">=18",
+    "npm": ">=9"
   },
   "webExt": {
     "sourceDir": "./dist"
