--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "compile-smui-theme-dark": "smui-theme compile src/treetop/generated/smui-dark.css -i src/theme/dark",
     "lint": "eslint ./src ./test",
     "lint:fix": "eslint ./src ./test --fix",
-    "prettier": "prettier --check ./src ./test",
-    "prettier:fix": "prettier --write ./src ./test",
+    "prettier": "prettier --check --plugin=prettier-plugin-svelte ./src ./test",
+    "prettier:fix": "prettier --write --plugin=prettier-plugin-svelte ./src ./test",
     "build": "concurrently --max-processes 1 \"npm:build:background_script\" \"npm:build:options\" \"npm:build:treetop\" \"npm:build:welcome\"",
     "build:watch": "concurrently \"npm:build:background_script:watch\" \"npm:build:options:watch\" \"npm:build:treetop:watch\" \"npm:build:welcome:watch\"",
     "build:background_script": "vite build --config vite.background_script.config.ts",
@@ -63,8 +63,8 @@
     "normalize.css": "^8.0.1",
     "postcss": "^8.4.26",
     "postcss-url": "^10.1.3",
-    "prettier": "^2.8.4",
-    "prettier-plugin-svelte": "^2.9.0",
+    "prettier": "3.0.0",
+    "prettier-plugin-svelte": "^3.0.0",
     "rollup-plugin-copy": "^3.4.0",
     "sass": "^1.63.6",
     "smui-theme": "^6.2.0",
