Add `typecheck` command
Add `typecheck` command that compiles the project with `tsc` to check
for TypeScript errors.

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -19,4 +19,5 @@ jobs:
       - run: npm run prettier
       - run: npm run lint
       - run: npm run validate
+      - run: npm run typecheck
       - run: npm test
