--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "build:welcome:watch": "vite build --config vite.welcome.config.ts --mode development --watch",
     "prepare": "npm run compile-smui-theme-light && npm run compile-smui-theme-dark",
     "test": "jest",
+    "typecheck": "tsc --noEmit",
+    "typecheck:watch": "tsc --noEmit --watch",
     "validate": "svelte-check --no-tsconfig"
   },
   "author": "Max Smolens <msmolens@gmail.com>",
