--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@fontsource/inter": "~5.0.16",
     "@fontsource/material-icons": "~5.0.11",
     "@fontsource/news-cycle": "~5.0.18",
+    "@playwright/test": "~1.40.1",
     "@smui/button": "~7.0.0-beta.16",
     "@smui/dialog": "~7.0.0-beta.16",
     "@smui/icon-button": "~7.0.0-beta.16",
@@ -47,6 +48,7 @@
     "@tsconfig/svelte": "~5.0.2",
     "@types/faker": "5.5.9",
     "@types/lodash-es": "~4.17.12",
+    "@types/node": "~20.10.5",
     "@typescript-eslint/eslint-plugin": "~6.16.0",
     "@typescript-eslint/parser": "~6.16.0",
     "chrome-types": "~0.1.246",
