Update to ESLint 9

--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "compile-smui-theme-light": "smui-theme compile src/treetop/generated/smui.css -i src/theme",
     "compile-smui-theme-dark": "smui-theme compile src/treetop/generated/smui-dark.css -i src/theme/dark",
     "coverage": "vitest run --coverage",
-    "lint": "eslint ./src ./test",
-    "lint:fix": "eslint ./src ./test --fix",
+    "lint": "eslint",
+    "lint:fix": "eslint --fix",
     "prettier": "prettier --check ./src ./test",
     "prettier:fix": "prettier --write ./src ./test",
     "build": "concurrently --max-processes 1 \"npm:build:background_script\" \"npm:build:options\" \"npm:build:treetop\" \"npm:build:welcome\" \"npm:build:manifest\"",
@@ -31,6 +31,7 @@
   "author": "Max Smolens <msmolens@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@eslint/js": "~9.37.0",
     "@fontsource/inter": "~5.0.16",
     "@fontsource/material-icons": "~5.0.11",
     "@fontsource/news-cycle": "~5.0.18",
@@ -47,14 +48,12 @@
     "@tsconfig/svelte": "~5.0.2",
     "@types/faker": "5.5.9",
     "@types/lodash-es": "~4.17.12",
-    "@typescript-eslint/eslint-plugin": "~6.16.0",
-    "@typescript-eslint/parser": "~6.16.0",
     "chrome-types": "~0.1.246",
     "concurrently": "~8.2.2",
-    "eslint": "~8.56.0",
-    "eslint-config-prettier": "~9.1.0",
-    "eslint-plugin-simple-import-sort": "~10.0.0",
-    "eslint-plugin-svelte": "~2.35.1",
+    "eslint": "~9.37.0",
+    "eslint-config-prettier": "~10.1.8",
+    "eslint-plugin-simple-import-sort": "~12.1.1",
+    "eslint-plugin-svelte": "~3.12.4",
     "faker": "5.5.3",
     "jsdom": "~23.0.1",
     "lodash-es": "~4.17.21",
@@ -68,6 +67,7 @@
     "svelte-check": "~3.6.2",
     "svelte-preprocess": "~5.1.3",
     "typescript": "~5.3.3",
+    "typescript-eslint": "~8.45.0",
     "vite": "~5.0.10",
     "vite-tsconfig-paths": "~4.2.2",
     "vitest": "~1.1.0"
