--- a/package.json
+++ b/package.json
@@ -36,13 +36,13 @@
     "@fontsource/inter": "~5.2.8",
     "@fontsource/material-icons": "~5.2.7",
     "@fontsource/news-cycle": "~5.2.7",
-    "@smui/button": "~7.0.0-beta.16",
-    "@smui/dialog": "~7.0.0-beta.16",
-    "@smui/icon-button": "~7.0.0-beta.16",
-    "@smui/linear-progress": "~7.0.0-beta.16",
-    "@smui/snackbar": "~7.0.0-beta.16",
-    "@smui/textfield": "~7.0.0-beta.16",
-    "@sveltejs/vite-plugin-svelte": "~3.1.2",
+    "@smui/button": "~8.0.3",
+    "@smui/dialog": "~8.0.3",
+    "@smui/icon-button": "~8.0.3",
+    "@smui/linear-progress": "~8.0.3",
+    "@smui/snackbar": "~8.0.3",
+    "@smui/textfield": "~8.0.3",
+    "@sveltejs/vite-plugin-svelte": "~6.2.1",
     "@testing-library/jest-dom": "~6.9.1",
     "@testing-library/svelte": "~5.2.8",
     "@testing-library/user-event": "~14.6.1",
@@ -60,14 +60,13 @@
     "prettier": "~3.6.2",
     "prettier-plugin-svelte": "~3.4.0",
     "rollup-plugin-copy": "~3.5.0",
-    "sass": "~1.69.5",
-    "smui-theme": "~7.0.0-beta.16",
-    "svelte": "~4.2.8",
-    "svelte-check": "~3.6.2",
-    "svelte-preprocess": "~6.0.3",
+    "sass": "~1.93.2",
+    "smui-theme": "~8.0.3",
+    "svelte": "~5.39.11",
+    "svelte-check": "~4.3.3",
     "typescript": "~5.9.3",
     "typescript-eslint": "~8.45.0",
-    "vite": "~5.4.20",
+    "vite": "~7.1.9",
     "vite-tsconfig-paths": "~5.1.4",
     "vitest": "~3.2.4"
   },
